@@ -110,7 +110,7 @@ def build_asset_collection(assets_by_site, time_event=None):
             taxonomies.add(asset.taxonomy)
     sorted_taxonomies = sorted(taxonomies)
     asset_dt = numpy.dtype(
-        [('asset_ref', (bytes, valid.ASSET_ID_LENGTH)),
+        [('asset_ref', '|S100'),
          ('lon', F32), ('lat', F32), ('site_id', numpy.uint32),
          ('taxonomy', numpy.uint32), ('number', F32), ('area', F32)] +
         [(name, float) for name in float_fields])
